--- a/src/lib/styles/globals.css
+++ b/src/lib/styles/globals.css
@@ -86,3 +86,12 @@
         @apply bg-background text-foreground;
     }
 }
+
+.hide-scroll-bar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.hide-scroll-bar::-webkit-scrollbar {
+    display: none;
+}
